--- a/index.html
+++ b/index.html
@@ -1,59 +1,202 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
+
 <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Mike: My Personal Site</title>
- </head>
- <body>
-    <table cellspacing="20">
-        <td> <img src="/HTML- Personal Site/IMG_20220926_232848.jpg" alt="ye ye ye  " width="50"></td>
-        <td> 
-          <h1>Podeke Michael</h1>  
-          <p> <em>Founder And CTO Of Big Money</em> </p>
-       
-          <P>I am a professor at <strong><a href="https://o2tvseries.co/">Big Money</a></strong>, I make a 100 mil a year being easy, I go to school in Cotonou, Benin Republic to be precise. About to get my degree in computer science and make more money <em>blah blah blah</em> </P></td>
-    </table>
 
-    <hr>
-    <h3>Education</h3>
-   <ul>
-     <li> Primrose Primary school</li>
-     <li> Maryland Comprehensive Secondary school</li>
-     <li> ISCG University</li>
-   </ul>
+<head>
 
-   <hr>
-   <h3>My Hobbies</h3>
-   <ol>
-     <li><a href="https://nba.com/">Basketball</a></li>
-     <li>Tennis</li>
-     <li><a href="https://spotify.com">Music</a></li>
-   </ol>
-    <h3> <a href="contacts.html">Contact Me</a></h3>
+  <meta charset="UTF-8">
 
-    <hr>
-    <h3>Experience</h3>
-   <table border="1" cellspacing="10">
-     <thead>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Big Mike: My Personal Site</title>
+
+  <style>
+
+    body {
+
+      font-family: Arial, sans-serif;
+
+      margin: 0;
+
+      padding: 20px;
+
+    }
+
+    table {
+
+      border-collapse: collapse;
+
+    }
+
+    th, td {
+
+      padding: 10px;
+
+      text-align: left;
+
+    }
+
+    h1 {
+
+      margin-top: 0;
+
+    }
+
+    h3 {
+
+      margin-bottom: 10px;
+
+    }
+
+    img {
+
+      display: block;
+
+      max-width: 100%;
+
+      height: auto;
+
+      margin-bottom: 10px;
+
+    }
+
+    hr {
+
+      border: none;
+
+      border-top: 1px solid #ccc;
+
+      margin: 20px 0;
+
+    }
+
+    ul, ol {
+
+      margin: 0;
+
+      padding-left: 20px;
+
+    }
+
+    a {
+
+      color: #007bff;
+
+      text-decoration: none;
+
+    }
+
+    table.skills {
+
+      margin-top: 10px;
+
+    }
+
+    table.skills td:first-child {
+
+      font-weight: bold;
+
+    }
+
+  </style>
+
+</head>
+
+<body>
+
+  <table cellspacing="20">
+
+    <tr>
+
+      <td><img src="/HTML- Personal Site/IMG_20220926_232848.jpg" alt="ye ye ye" width="50"></td>
+
+      <td>
+
+        <h1>Podeke Michael</h1>
+
+        <p><em>Founder And CTO Of Big Money</em></p>
+
+        <p>I am a professor at <strong><a href="https://o2tvseries.co/">Big Money</a></strong>, I make 100 million a year being easy, I go to school in Cotonou, Benin Republic to be precise. About to get my degree in computer science and make more money <em>blah blah blah</em></p>
+
+      </td>
+
+    </tr>
+
+  </table>
+
+  <hr>
+
+  <h3>Education</h3>
+
+  <ul>
+
+    <li>Primrose Primary School</li>
+
+    <li>Maryland Comprehensive Secondary School</li>
+
+    <li>ISCG University</li>
+
+  </ul>
+
+  <hr>
+
+  <h3>My Hobbies</h3>
+
+  <ol>
+
+    <li><a href="https://nba.com/">Basketball</a></li>
+
+    <li>Tennis</li>
+
+    <li><a href="https://spotify.com">Music</a></li>
+
+  </ol>
+
+  <h3><a href="contacts.html">Contact Me</a></h3>
+
+  <hr>
+
+  <h3>Experience</h3>
+
+  <table class="experience">
+
+    <thead>
+
       <tr>
-       <th>Dates</th>
-       <th>Work</th>
+
+        <th>Dates</th>
+
+        <th>Work</th>
+
       </tr>
-     </thead>
-     <tbody>
-       <tr>
-         <td>2010-2013</td>
-         <td>Banking and finance</td>
-       </tr>
-       <tr>
-         <td>2013-2017</td>
-         <td>School of thought</td>
-       </tr>
-        <tr>
-         <td>2017-Present</td>
-         <td>Finding out for myself</td>
+
+    </thead>
+
+    <tbody>
+
+      <tr>
+
+        <td>2010-2013</td>
+
+        <td>Banking and Finance</td>
+
+      </tr>
+
+      <tr>
+
+        <td>2013-2017</td>
+
+        <td>School of Thought</td>
+
+      </tr>
+
+      <tr>
+
+        <td>2017-Present</td>
+
+        <td>Finding out for myself</td>
        </tr>
      </tbody>
    </table> 
@@ -61,7 +204,7 @@
    <hr>
    <h3>Skills</h3>
    <table cellspacing="10">
-    <tr>
+    <tr>t
       <td>Basketball</td>
       <td>⭐⭐⭐</td>
     </tr>
